[package]
name = "rcore-fs-fuse"
version = "0.1.0"
authors = ["WangRunji <wangrunji0408@163.com>"]
edition = "2018"

[features]
use_fuse = ["fuse"]

[dependencies]
time = "0.1"
libc = "0.2"
log = "0.4"
fuse = { version = "0.3", optional = true }
structopt = "0.2"
env_logger = "0.3"
git-version = "0.3"
rcore-fs = { path = "../rcore-fs", features = ["std"] }
rcore-fs-sfs = { path = "../rcore-fs-sfs" }
rcore-fs-sefs = { path = "../rcore-fs-sefs", features = ["std"] }
