[package]
name = "rcore-fs-sefs"
version = "0.1.0"
authors = ["WangRunji <wangrunji0408@163.com>"]
edition = "2018"

[dependencies]
rcore-fs = { path = "../rcore-fs" }
static_assertions = "1.1"
spin = "0.9"
log = "0.4"
bitvec = { version = "1.0", default-features = false, features = ["alloc"] }

[features]
std = ["rcore-fs/std"]
