[package]
name = "rcore-fs-unionfs"
version = "0.1.0"
authors = ["Runji Wang <wangrunji0408@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
spin = "0.5"
rcore-fs = { path = "../rcore-fs" }

[dev-dependencies]
rcore-fs-ramfs = { path = "../rcore-fs-ramfs" }
