[package]
name = "rcore-fs"
version = "0.1.0"
authors = ["WangRunji <wangrunji0408@163.com>", "Ben Pig Chu <benpichu@gmail.com>"]
edition = "2018"

[[bin]]
name = "mksfs"
path = "src/bin/mksfs.rs"
required-features = ["std"]

[dependencies]
bit-vec = { default-features = false, git = "https://github.com/AltSysrq/bit-vec.git" } # default-features contains 'std'
static_assertions = "0.3"
spin = "0.4"

[dev-dependencies]
tempfile = "3"

[features]
std = []