[package]
name = "Helloworldsampleenclave"
version = "1.0.0"
authors = ["Baidu"]

[lib]
name = "helloworldsampleenclave"
crate-type = ["staticlib"]

[features]
default = []

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_types = { path = "../../../rust-sgx-sdk/sgx_types" }
sgx_tstd = { path = "../../../rust-sgx-sdk/sgx_tstd" }
