[package]
name = "Helloworldsampleenclave"
version = "1.0.0"
authors = ["Baidu"]

[lib]
name = "helloworldsampleenclave"
crate-type = ["staticlib"]

[features]
default = []

[dependencies]
lazy_static = { version = "1.1.0", features = ["spin_no_std"] } # Implies nightly

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_types = "1.0.6"
sgx_tstd = "1.0.6"
